<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/contents"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:textSize="30sp"
        android:layout_margin="20dp"


        />


    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/About_App"
        android:textSize="30sp"
        android:layout_margin="20dp"

        />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Activate"
        android:textSize="30sp"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/De_Activate"
        android:textSize="30sp"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Exit"
        android:textSize="30sp"
        android:layout_margin="20dp"
        />
</LinearLayout>
