<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background1"
        android:weightSum="1">


        <Button
            android:id="@+id/button7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/favourite_contacts"
            android:layout_marginTop="100dp"
            android:textSize="30sp"
            android:layout_margin="20dp"/>
    <Button
        android:id="@+id/button8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/alert_message_settings"
        android:textSize="30sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/LOCATION_SETTINGS"
        android:textSize="30sp"
        android:layout_margin="20dp"/>


</LinearLayout>
